fix vertical alignment issues with flipped quizcards

--- a/assets/sass/_main.scss
+++ b/assets/sass/_main.scss
@@ -900,6 +900,7 @@ body {
                             min-height: 200px;
                             height: auto;
                             box-shadow: none;
+                            padding: 0; // Remove padding from outer container
 
                             &:hover {
                                 border: none;
@@ -922,6 +923,8 @@ body {
                             .quiz---flipcard--front,
                             .quiz---flipcard--back {
                                 position: absolute;
+                                top: 0;
+                                left: 0;
                                 width: 100%;
                                 min-height: 200px;
                                 height: auto;
@@ -932,6 +935,7 @@ body {
                                 box-shadow: black 0 0 4px 0;
                                 padding: 10px;
                                 border-radius: 4px;
+                                box-sizing: border-box; // Include padding in width calculation
 
                                 transition: border .3s;
 
@@ -943,12 +947,14 @@ body {
                             .quiz---flipcard--front {
                                 z-index: 2;
                                 transform: rotateY(0deg);
+                                position: relative; // Keep front in document flow to give container height
                             }
 
                             .quiz---flipcard--back {
                                 transform: rotateY(180deg);
                                 background: #c8f7ff;
                                 border: solid 3px #c8f7ff;
+                                position: absolute; // Back is absolutely positioned
 
                                 &:hover {
                                     border: solid 3px darken(#c8f7ff, 18%);
